RESOLVED FIXED188304
Invalid optional access in WebDriver Session::createTopLevelBrowsingContext
https://bugs.webkit.org/show_bug.cgi?id=188304
Summary Invalid optional access in WebDriver Session::createTopLevelBrowsingContext
Ms2ger (he/him; ⌚ UTC+1/+2)
Reported 2018-08-03 05:46:19 PDT
.
Attachments
Patch (1.61 KB, patch)
2018-08-03 05:52 PDT, Ms2ger (he/him; ⌚ UTC+1/+2)
no flags
Ms2ger (he/him; ⌚ UTC+1/+2)
Comment 1 2018-08-03 05:52:29 PDT
Ms2ger (he/him; ⌚ UTC+1/+2)
Comment 2 2018-08-03 06:21:45 PDT
This should fix >100 crashes on the debug bot.
Blaze Burg
Comment 3 2018-08-03 11:09:30 PDT
Comment on attachment 346474 [details] Patch rs=me
WebKit Commit Bot
Comment 4 2018-08-03 11:36:38 PDT
Comment on attachment 346474 [details] Patch Clearing flags on attachment: 346474 Committed r234555: <https://trac.webkit.org/changeset/234555>
WebKit Commit Bot
Comment 5 2018-08-03 11:36:39 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6 2018-08-03 11:37:23 PDT
Note You need to log in before you can comment on or make changes to this bug.