Fix invalid optional access in WebDriver Session::createTopLevelBrowsingContext. https://bugs.webkit.org/show_bug.cgi?id=188304

Reviewed by Brian Burg.

* Session.cpp:
(WebDriver::Session::createTopLevelBrowsingContext): remove incorrect value() call.


Canonical link: https://commits.webkit.org/203414@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@234555 268f45cc-cd09-0410-ab3c-d52691b4dbfc